[+] Fixed build for Workspace UI